--- a/index.html
+++ b/index.html
@@ -37,15 +37,20 @@
         </div>
         <div class="panel buttons">
             <template v-if="running">
-                <button class="btn attack">Ataque</button>
-                <button class="btn especial-attack">Ataque Especial</button>
-                <button class="btn heal">Curar</button>
+                <button class="btn attack" @click="attack(false)">Ataque</button>
+                <button class="btn especial-attack" @click="attack(true)">Ataque Especial</button>
+                <button class="btn heal" @click="healAndHurt">Curar</button>
                 <button @click="running = false" class="btn give-up">Desistir</button>
             </template>
             <button v-else @click="startGame" class="btn new-game">Iniciar Jogo</button>
 
         </div>
-        <div class="panel logs"></div>
+        <div v-if="logs.length" 
+            class="panel logs">
+            <ul>
+                <li class="log" :class="log.cls" v-for="log in logs">{{log.text}}</li>
+            </ul>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
